# ta_lab2

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  API_MAP.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  REBUILD_INSTRUCTIONS.md  SECURITY.md  alembic.ini  changelog.md  config.py  convert_projecttt_batch.py  economic_data.env.example  fix_qdrant_persistence.py  full_diff.patch  generate_function_map.py  generate_function_map_with_purpose.py  generate_structure_docs.py  mkdocs.yml  price_bars_audit.csv  pyproject.toml  rebuild_all.bat  requirements-311.txt  run_btc.py  run_migration.py  run_migration_fixed.py  setup_qdrant_server.bat  src_structure.json  start_qdrant_server.bat  structure.csv  structure.json  structure.md  structure.txt  test_cal_refactored.py  tree_structure.py
.archive/: 00-README.md
.archive/deprecated/: manifest.json
.archive/documentation/: manifest.json
.archive/duplicates/: manifest.json
.archive/external-packages/2026-02-03/fedtools2/: README.md  db_config.example.env  pyproject.toml  setup.py  structure.json  structure.md  structure.txt
.archive/external-packages/2026-02-03/fedtools2/src/fedtools2/: __init__.py  etl.py  sql_sink_example.py
.archive/external-packages/2026-02-03/fedtools2/src/fedtools2/config/: __init__.py  default.yaml
.archive/external-packages/2026-02-03/fedtools2/src/fedtools2/utils/: consolidation.py  io.py
.archive/external-packages/2026-02-03/fedtools2/tests/: test_consolidation.py  test_etl_smoke.py
.archive/external-packages/2026-02-03/fredtools2/: pyproject.toml
.archive/external-packages/2026-02-03/fredtools2/sql/: 001_check_out.sql  002_check_out.sql  003_check_out.sql  004_check_out.sql
.archive/external-packages/2026-02-03/fredtools2/src/fredtools2/: cli.py  config.py  db.py  fred_api.py
.archive/external-packages/2026-02-03/fredtools2/src/fredtools2/jobs/: releases.py  series.py
.archive/external-packages/2026-02-03/fredtools2/src/fredtools2/sql/: .env.example.txt  schema.sql
.archive/migrated/: manifest.json
.archive/originals/: manifest.json
.archive/refactored/: manifest.json
.archive/scripts/: manifest.json
.archive/temp/: manifest.json
.archive/test_git_history/: test_file.py
.claude/: settings.local.json
.github/: pull_request_template.md  release-please-config.json
.github/CODEOWNERS/: CODEOWNERS.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  tech_task.yml
.github/workflows/: add-to-project.yml  ci.yml  publish-release.yml  release-please.yml  release.yml  validation.yml
.planning/: MILESTONES.md  ORCHESTRATOR-QUICKSTART.md  PARALLEL-TRACKS.md  PROJECT.md  REQUIREMENTS-v0.5.0.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  multi-ai-orchestrator-design.md  v0.8.0-MILESTONE-AUDIT.md  v0.9.0-MILESTONE-AUDIT.md  v1.0.0-MILESTONE-AUDIT.md  v1.0.1-INTEGRATION-CHECK.md  v1.0.1-MILESTONE-AUDIT.md  v1.0.1-MILESTONE-REAUDIT.md  v1.0.1-REAUDIT-INTEGRATION-CHECK.md  v1.2.0-MILESTONE-AUDIT.md  v1.3.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.8.0-MILESTONE-AUDIT.md  v0.8.0-REQUIREMENTS.md  v0.8.0-ROADMAP.md  v0.9.0-REQUIREMENTS.md  v0.9.0-ROADMAP.md  v1.0.0-REQUIREMENTS.md  v1.0.0-ROADMAP.md  v1.0.1-REQUIREMENTS.md  v1.0.1-ROADMAP.md  v1.1.0-MILESTONE-AUDIT.md  v1.1.0-REQUIREMENTS.md  v1.1.0-ROADMAP.md  v1.2.0-MILESTONE-AUDIT.md  v1.2.0-REQUIREMENTS.md  v1.2.0-ROADMAP.md  v1.3.0-REQUIREMENTS.md  v1.3.0-ROADMAP.md
.planning/phases/: BENCHMARK-RESULTS.md  bar-builders-FINAL-SUMMARY.md  bar-builders-refactoring-COMPLETE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  quant_finance_ecosystem_review.md
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 25f2b3c90f65_baseline.py  (+54 more)
config/: default.yaml
configs/: cross_asset_config.yaml  ctf_composites_config.yaml  ctf_config.yaml  ctf_config_pruned.yaml  default.yaml  executor_config_seed.yaml  feature_selection.yaml  macro_regime_config.yaml  mass_backtest_grids.yaml  portfolio.yaml  regime_policies.yaml
data/: btcusd.csv  ta_lab2_companion.xlsx
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: BAR_TABLE_AUTO_CREATION.md  CHANGELOG.md  COMPOSITES.md  DESIGN.md  Data Pipeline.md  EMA_STATE_STANDARDIZATION.md  EMA_TABLE_AUTO_CREATION.md  PIPELINE_CONTRACTS.md  PROJECT_CHRONOLOGY.md  REORGANIZATION.md  conversion_checkpoint.json  conversion_notes.md  deployment.md  index.md
notebooks/: 01_explore_indicators.ipynb  02_evaluate_features.ipynb  03_run_experiments.ipynb  04_evaluation_findings.ipynb  helpers.py
scripts/: benchmark_builders.py  update_phase15_memory.py
sql/: 001_check_out.sql  002_check_out.sql  004_compare_emas_to_snapshots_2.sql  007_check_out.sql  011_check_out.sql  012_check_out.sql  013_check_out.sql  alter_dim_timeframe_check.sql  create_alter_cmc_price_with_emas.sql  current_insert_into_multi_tf_u_2.sql  id_tf_period_combo_change_tracker_mtf_mtfcal.sql  schema_key_table_template.sql  sql_folder_structure.md
tests/: # test_bar_ohlc_correctness_fast.py  conftest.py  test_bar_contract.py  test_bar_contract_gap_tests.py  test_bar_ohlc_correctness.py  test_bar_ohlc_correctness_fast.py  test_bar_table_ddl.py  test_bar_validation.py  test_calendar.py  test_canonical_order.py  test_circular_deps.py  test_cli_paths.py  test_coinbase_auth.py  test_connectivity.py  test_db_snapshot_check.py  test_db_snapshot_diff.py  test_derivation_consistency.py  test_ema_table_ddl.py  test_ema_validation.py  test_exchange_config.py  test_experiments.py  test_features_ema.py  test_funding_adjuster.py  test_imports.py  test_kraken_auth.py  test_margin_monitor.py  test_perps_integration.py  test_pipeline.py  test_polars_bar_operations.py  test_price_feed.py  test_regime_labelers_feature_utils_smoke.py  test_regime_policy_resolution_tighten_only_and_hysteresis.py  test_risk_margin_gate.py  test_sessions_dst.py  test_smoke_imports.py  test_wireup_signals_backtests.py
(+2646 files in other folders)
