[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ta_lab2"
version = "0.4.0"
description = "Technical analysis & regime-detection toolkit"
readme = "README.md"
requires-python = ">=3.10"

# Core runtime deps used across the package
dependencies = [
  "pandas",
  "polars>=0.19.0",
  "pyarrow>=14.0.0",
  "pyyaml",
  "numpy",
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "matplotlib>=3.8"
]

[project.scripts]
ta-lab2 = "ta_lab2.cli:main"

# ---------- Optional dependency groups (ALL IN ONE BLOCK) ----------
[project.optional-dependencies]
# Dev / CI convenience
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.12.0",
  "pytest-benchmark",
  "pytest-cov>=4.0.0",
  "pytest-json-report>=1.5.0",
  "hypothesis",
  "ruff>=0.1.5",
  "mypy>=1.8",
  "import-linter>=2.7",
]

# Plotting (used by viz/all_plots.py and CLI optional plots)
viz = [
  "matplotlib>=3.6",
]

# Astronomy extras for exact seasons/moon in calendar features
astro = [
  "astronomy-engine>=2.2.0",
]

# AI orchestrator SDKs and dependencies
orchestrator = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "google-generativeai>=0.8.0",
  "mem0ai>=0.1.0",
  "chromadb>=0.4.0",
  "fastapi>=0.104.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

# Documentation generation
docs = [
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=1.0",
]

# Economic data integration (FRED)
fred = [
  "fredapi>=0.5.2",
]

# Economic data integration (Fed - future)
# Currently empty, placeholder for fedfred or other Fed-specific packages
fed = [
  # "fedfred>=1.0",  # Uncomment when Fed provider implemented
]

# All economic data providers combined
economic = [
  "fredapi>=0.5.2",
  # "fedfred>=1.0",  # Uncomment when Fed provider implemented
]

# Combined group for development + orchestrator + docs + economic
all = [
  "pytest>=8.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.12.0",
  "pytest-benchmark",
  "hypothesis",
  "ruff>=0.1.5",
  "mypy>=1.8",
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "google-generativeai>=0.8.0",
  "mem0ai>=0.1.0",
  "chromadb>=0.4.0",
  "fastapi>=0.104.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=1.0",
  "fredapi>=0.5.2",
]

# ---------- Pytest configuration ----------
[tool.pytest.ini_options]
markers = [
    "real_deps: Tests requiring real infrastructure (database, Qdrant, OpenAI)",
    "mixed_deps: Tests with real database/Qdrant, mocked AI APIs",
    "mocked_deps: Tests with all external dependencies mocked (CI/CD)",
    "integration: Integration tests (cross-component)",
    "observability: Observability infrastructure tests",
    "validation: Gap and alignment validation tests",
    "validation_gate: CI validation gate tests (require real database)",
    "orchestrator: Tests requiring chromadb/mem0ai optional dependencies",
    "slow: Tests that take >10 seconds",
]

# ---------- Setuptools (src/ layout + root module) ----------
[tool.setuptools.packages.find]
where = ["src"]

# Also install the top-level config.py so `from config import load_settings` works
[tool.setuptools]
py-modules = ["config"]

# ---------- Coverage configuration ----------
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ---------- Import-linter configuration ----------
[tool.importlinter]
root_package = "ta_lab2"

# Contract 1: No circular dependencies - define proper layering
# Higher layers can import from lower layers, but not vice versa
# scripts > pipelines/backtests > signals/regimes/analysis > features/tools (base)
[[tool.importlinter.contracts]]
name = "No circular dependencies between ta_lab2 layers"
type = "layers"
layers = [
    "ta_lab2.scripts",
    "ta_lab2.pipelines | ta_lab2.backtests",
    "ta_lab2.signals | ta_lab2.regimes | ta_lab2.analysis",
    "ta_lab2.features | ta_lab2.tools",
]

# Contract 2: Tools don't import from scripts (layering)
[[tool.importlinter.contracts]]
name = "Tools layer doesn't import from scripts layer"
type = "forbidden"
source_modules = ["ta_lab2.tools"]
forbidden_modules = ["ta_lab2.scripts"]

# Contract 3: Features don't import from scripts (layering)
[[tool.importlinter.contracts]]
name = "Features layer doesn't import from scripts layer"
type = "forbidden"
source_modules = ["ta_lab2.features"]
forbidden_modules = ["ta_lab2.scripts"]

# Contract 4: Tools shouldn't import features (foundation layer violation)
[[tool.importlinter.contracts]]
name = "Tools layer doesn't import from features layer"
type = "forbidden"
source_modules = ["ta_lab2.tools"]
forbidden_modules = ["ta_lab2.features"]

# Contract 5: Regimes and pipelines circular dependency check
[[tool.importlinter.contracts]]
name = "No circular dependency between regimes and pipelines"
type = "forbidden"
source_modules = ["ta_lab2.regimes"]
forbidden_modules = ["ta_lab2.pipelines"]
