[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ta_lab2"
version = "1.0.0"
description = "Technical analysis & regime-detection toolkit"
readme = "README.md"
requires-python = ">=3.10"

# Core runtime deps used across the package
dependencies = [
  "alembic>=1.18",
  "pandas",
  "polars>=0.19.0",
  "pyarrow>=14.0.0",
  "pyyaml",
  "numpy",
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "matplotlib>=3.8",
  "tqdm>=4.60"
]

[project.scripts]
ta-lab2 = "ta_lab2.cli:main"

# ---------- Optional dependency groups (ALL IN ONE BLOCK) ----------
[project.optional-dependencies]
# Dev / CI convenience
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.12.0",
  "pytest-benchmark",
  "pytest-cov>=4.0.0",
  "pytest-json-report>=1.5.0",
  "hypothesis",
  "ruff>=0.9.0",
  "mypy>=1.14",
  "pandas-stubs>=2.2",
  "import-linter>=2.7",
]

# Plotting (used by viz/all_plots.py and CLI optional plots)
viz = [
  "matplotlib>=3.6",
]

# Astronomy extras for exact seasons/moon in calendar features
astro = [
  "astronomy-engine>=2.2.0",
]

# AI orchestrator SDKs and dependencies
orchestrator = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "google-generativeai>=0.8.0",
  "mem0ai>=0.1.0",
  "chromadb>=0.4.0",
  "fastapi>=0.104.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

# Documentation generation
docs = [
  "mkdocs-material>=9.0,<9.7",
  "mkdocstrings[python]>=0.24",
]

# Economic data integration (FRED)
fred = [
  "fredapi>=0.5.2",
]

# Economic data integration (Fed - future)
# Currently empty, placeholder for fedfred or other Fed-specific packages
fed = [
  # "fedfred>=1.0",  # Uncomment when Fed provider implemented
]

# All economic data providers combined
economic = [
  "fredapi>=0.5.2",
  # "fedfred>=1.0",  # Uncomment when Fed provider implemented
]

# Validation reporting (end-of-period V1 report + Jupyter notebook)
validation = [
  "nbformat>=5.0",
]

# Analytics: QuantStats tear sheets and performance reporting
analytics = [
  "quantstats>=0.0.81",
]

# HMM regime analytics (Phase 68)
macro_analytics = [
  "hmmlearn>=0.3.3",
]

# ML ranking and explainability (Phase 100)
ml_ranking = [
  "xgboost>=3.2.0",
  "shap>=0.51.0",
]

# Portfolio construction and optimization
portfolio = [
  "PyPortfolioOpt>=1.5.6",
]

# Statistical analysis: ADF/KPSS stationarity, Ljung-Box autocorrelation, IC analysis, GARCH
analysis = [
  "statsmodels>=0.14.0",
  "arch>=8.0.0",
]

# Combined group for development + orchestrator + docs + economic
all = [
  "alembic>=1.18",
  "pytest>=8.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.12.0",
  "pytest-benchmark",
  "hypothesis",
  "ruff>=0.9.0",
  "mypy>=1.14",
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "google-generativeai>=0.8.0",
  "mem0ai>=0.1.0",
  "chromadb>=0.4.0",
  "fastapi>=0.104.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "mkdocs-material>=9.0,<9.7",
  "mkdocstrings[python]>=0.24",
  "fredapi>=0.5.2",
  "nbformat>=5.0",
  "statsmodels>=0.14.0",
]

# ---------- Pytest configuration ----------
[tool.pytest.ini_options]
markers = [
    "real_deps: Tests requiring real infrastructure (database, Qdrant, OpenAI)",
    "mixed_deps: Tests with real database/Qdrant, mocked AI APIs",
    "mocked_deps: Tests with all external dependencies mocked (CI/CD)",
    "integration: Integration tests (cross-component)",
    "observability: Observability infrastructure tests",
    "validation: Gap and alignment validation tests",
    "validation_gate: CI validation gate tests (require real database)",
    "orchestrator: Tests requiring chromadb/mem0ai optional dependencies",
    "slow: Tests that take >10 seconds",
]

# ---------- Setuptools (src/ layout + root module) ----------
[tool.setuptools.packages.find]
where = ["src"]

# Also install the top-level config.py so `from config import load_settings` works
[tool.setuptools]
py-modules = ["config"]

# ---------- Coverage configuration ----------
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ---------- Ruff configuration ----------
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = ["E402"]  # Module-level imports: scripts use sys.path manipulation before imports

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Allow unused variables in tests (assertion results)
"**/__init__.py" = ["F401"]  # Allow re-exports in package __init__ files

# ---------- Mypy configuration ----------
[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

# ---------- Import-linter configuration ----------
[tool.importlinter]
root_package = "ta_lab2"

# Contract 1: No circular dependencies - define proper layering
# Higher layers can import from lower layers, but not vice versa
# scripts > pipelines/backtests > signals/regimes/analysis > features/tools (base)
[[tool.importlinter.contracts]]
name = "No circular dependencies between ta_lab2 layers"
type = "layers"
layers = [
    "ta_lab2.scripts",
    "ta_lab2.pipelines | ta_lab2.backtests",
    "ta_lab2.signals | ta_lab2.regimes | ta_lab2.analysis",
    "ta_lab2.features | ta_lab2.tools",
]

# Contract 2: Tools don't import from scripts (layering)
[[tool.importlinter.contracts]]
name = "Tools layer doesn't import from scripts layer"
type = "forbidden"
source_modules = ["ta_lab2.tools"]
forbidden_modules = ["ta_lab2.scripts"]

# Contract 3: Features don't import from scripts (layering)
[[tool.importlinter.contracts]]
name = "Features layer doesn't import from scripts layer"
type = "forbidden"
source_modules = ["ta_lab2.features"]
forbidden_modules = ["ta_lab2.scripts"]

# Contract 4: Tools shouldn't import features (foundation layer violation)
[[tool.importlinter.contracts]]
name = "Tools layer doesn't import from features layer"
type = "forbidden"
source_modules = ["ta_lab2.tools"]
forbidden_modules = ["ta_lab2.features"]

# Contract 5: Regimes and pipelines circular dependency check
[[tool.importlinter.contracts]]
name = "No circular dependency between regimes and pipelines"
type = "forbidden"
source_modules = ["ta_lab2.regimes"]
forbidden_modules = ["ta_lab2.pipelines"]
